--- a/Hello/pom.xml
+++ b/Hello/pom.xml
@@ -13,14 +13,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	<repositories>
+	<distributionManagement>
 		<repository>
 			<id>corp1</id>
 			<name>Corporate Repository</name>
-			<url>c://repomaven2</url>
+			<url>http://localhost:8081/Hello.export</url>
 			<layout>default</layout>
 		</repository>
-	</repositories>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
